homework_10: connect libraries JUnit and Mockito