@@ -32,6 +32,12 @@ android {
     }
 }
 
+tasks.withType<Test> {
+    useJUnitPlatform() // Все тесты в domain используют JUnit 5
+    jvmArgs("-XX:+EnableDynamicAgentLoading")  // Разрешение динамической загрузки Java-агентов (ByteBuddy и др.)
+}
+
+
 dependencies {
 
     // Базовые зависимости
@@ -39,10 +45,12 @@ dependencies {
     implementation(libs.androidx.appcompat)
     implementation(libs.material)
 
-    // Для тестирования
-    testImplementation(libs.junit)
-    androidTestImplementation(libs.androidx.junit)
-    androidTestImplementation(libs.androidx.espresso.core)
+    // Testing
+    // Модульные тесты (JVM)
+    testImplementation(libs.junit.jupiter)
+    testImplementation(libs.mockito.core)
+    testImplementation(libs.mockito.kotlin)
+    testImplementation(libs.kotlinx.coroutines.test)
 
     // Если domain использует Hilt только для аннотаций (без внедрения)
     compileOnly(libs.hilt.android)
